# ezEngine

./: .gdbinit  .gitignore  .lldbinit  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GenerateWin64vs2022.bat  GenerateWin64vs2026.bat  RunCMake.ps1  RunCMake.sh  ezCMakeConfig.cmake  gitClean.txt  version.txt
.claude/: settings.json
.claude/commands/: update-docs.md
.github/: copilot-instructions.md
.github/skills/debug-pretty-printers/: SKILL.md
.github/workflows/: build-release-package.yml  clang-format.yml  update-api-docs.yml  update-precompiled-tools.yml
Code/BuildSystem/AzurePipelines/: Android-arm64.yml  Android-x64.yml  Linux-x64.yml  MacOS-x64.yml  Windows-x64.yml  clang-tidy.yml
Code/BuildSystem/CMake/: FindEzVulkan.cmake  ezUtils.cmake
Code/Editor/Editor/: CMakeLists.txt  Editor.cpp  Editor.rc
Code/Editor/EditorEngineProcess/: EngineProcGameApp.cpp  EngineProcGameApp.h
Code/Editor/EditorProcessor/: EditorProcessor.cpp
Code/EditorPlugins/Terrain/EnginePluginTerrain/: CMakeLists.txt  EnginePluginTerrain.cpp  EnginePluginTerrainDLL.h  EnginePluginTerrainPCH.cpp  EnginePluginTerrainPCH.h
Code/EditorPlugins/Terrain/EnginePluginTerrain/SceneExport/: TerrainHeightfieldExportModifier.cpp  TerrainHeightfieldExportModifier.h  TerrainVoxelExportModifier.cpp  TerrainVoxelExportModifier.h
Code/Engine/Core/: CorePCH.cpp
Code/Engine/Foundation/: Basics.h  CMakeLists.txt  FoundationPCH.cpp  UserConfig.h  ezEngine-gdb.py  ezEngine.py  headerCheckerIgnore.json
Code/Engine/GameEngine/: GameEnginePCH.cpp
Code/Engine/RendererCore/: RendererCorePCH.cpp
Code/Engine/RendererFoundation/: RendererFoundationDLL.h  RendererReflection.cpp  RendererReflection.h
Code/Engine/RendererVulkan/: CMakeLists.txt  RendererVulkanDLL.h  RendererVulkanPCH.h
Code/Engine/ShaderCompilerDXC/: CMakeLists.txt  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h
Code/Engine/ShaderCompilerHLSL/: ShaderCompilerHLSL.cpp
Code/Engine/Texture/: CMakeLists.txt  TexturePCH.cpp
Code/EnginePlugins/AiPlugin/: AI.ezPluginBundle
Code/EnginePlugins/AngelScriptPlugin/: AngelScript.ezPluginBundle
Code/EnginePlugins/BakingPlugin/: BakingScene.cpp
Code/EnginePlugins/InspectorPlugin/: Input.cpp  (+4 more)
Code/EnginePlugins/OpenXRPlugin/: CMakeLists.txt  OpenXR.ezPluginBundle  OpenXRIncludes.h  OpenXRPluginPCH.cpp  OpenXRSingleton.cpp  OpenXRSingleton.h  OpenXRSpatialAnchors.cpp  cgmanifest.json  init.cmake
Code/EnginePlugins/OpenXRPlugin/Graphics/: OpenXRGraphicsBinding.h  OpenXRGraphicsBindingD3D11.h  OpenXRGraphicsBindingVulkan.h  OpenXRSwapChain.h
Code/EnginePlugins/OpenXRPlugin/Graphics/Implementation/: OpenXRGraphicsBinding.cpp  OpenXRGraphicsBindingD3D11.cpp  OpenXRGraphicsBindingVulkan.cpp  OpenXRSwapChain.cpp
Code/EnginePlugins/OpenXRPlugin/Input/: OpenXRInputDevice.h
Code/EnginePlugins/OpenXRPlugin/Input/Implementation/: OpenXRHandTracking.cpp  OpenXRInputDevice.cpp
Code/EnginePlugins/OpenXRPlugin/Utils/: OpenXRConversionUtils.h
Code/EnginePlugins/OpenXRPlugin/Utils/Implementation/: OpenXRConversionUtils.inl.h
Code/EnginePlugins/TerrainPlugin/: CMakeLists.txt  Terrain.ezPluginBundle  TerrainPluginDLL.h  TerrainPluginPCH.cpp  TerrainSystem.cpp  TerrainSystem.h  finalize.cmake
Code/EnginePlugins/TerrainPlugin/Components/: TerrainBrush2DComponent.cpp  TerrainBrush2DComponent.h  TerrainBrush3DComponent.cpp  TerrainBrush3DComponent.h  TerrainBrushAttributes.cpp  TerrainBrushAttributes.h  TerrainBrushBaseComponent.cpp  TerrainBrushBaseComponent.h  TerrainPatchComponent.cpp  TerrainPatchComponent.h  TerrainVolumeComponent.cpp  TerrainVolumeComponent.h
Code/EnginePlugins/TerrainPlugin/Rendering/: TerrainRenderData.h  TerrainRenderer.cpp  TerrainRenderer.h
Code/Samples/ShaderExplorer/: CMakeLists.txt  ShaderExplorer.cpp  ShaderExplorer.h
Code/Tools/MiniDumpTool/: CMakeLists.txt  MiniDumpTool.cpp
Code/UnitTests/GameEngineTest/: CMakeLists.txt
Code/UnitTests/GameEngineTest/AngelScriptTest/: AngelScriptTest.cpp  AngelScriptTest.h
Code/UnitTests/GameEngineTest/AnimationsTest/: AnimationsTest.cpp  AnimationsTest.h
Code/UnitTests/GameEngineTest/Basics/: Basics.cpp
Code/UnitTests/GameEngineTest/EffectsTest/: EffectsTest.cpp  EffectsTest.h
Code/UnitTests/GameEngineTest/KrautTest/: KrautTest.cpp  KrautTest.h
Code/UnitTests/GameEngineTest/ParticlesTest/: ParticlesTest.cpp  ParticlesTest.h
Code/UnitTests/GameEngineTest/ProcGenTest/: ProcGenTest.cpp  ProcGenTest.h
Code/UnitTests/GameEngineTest/RmlUiTest/: RmlUiTest.cpp
Code/UnitTests/GameEngineTest/StereoTest/: StereoTest.cpp  StereoTest.h
Code/UnitTests/GameEngineTest/TerrainTest/: TerrainTest.cpp  TerrainTest.h
Code/UnitTests/GameEngineTest/TestClass/: TestClass.cpp  TestClass.h
Code/UnitTests/GameEngineTest/VisualScriptTest/: VisualScriptTest.cpp
Data/Samples/PacMan/CppSource/PacManGame/: CMakeLists.txt  PacManGame.cpp  PacManGame.h
Data/Samples/RTS/CppSource/RTSPlugin/: CMakeLists.txt  RTSPlugin.ezPluginBundle  RTSPluginPCH.h
Data/Samples/RTS/CppSource/RTSPlugin/GameMode/: GameMode.cpp  GameMode.h
Data/Samples/RTS/CppSource/RTSPlugin/GameMode/BattleMode/: BattleMode.cpp  BattleMode.h
Data/Samples/RTS/CppSource/RTSPlugin/GameMode/EditLevelMode/: EditLevelMode.cpp  EditLevelMode.h
Data/Samples/RTS/CppSource/RTSPlugin/GameMode/MainMenuMode/: MainMenuMode.cpp  MainMenuMode.h
Data/Samples/RTS/CppSource/RTSPlugin/GameMode/SettingsMenuMode/: SettingsMenuMode.cpp  SettingsMenuMode.h
Data/Samples/RTS/CppSource/RTSPlugin/GameState/: RTSGameState.cpp  RTSGameState.h
Documentation/: Readme.md
Utilities/: RunStaticLinkUtil.bat
Utilities/Android/: AndroidEmulator.ps1  AndroidTest.ps1  AndroidUtils.ps1  BuildApk.ps1  CompileShaders.ps1  DbgAndroidLldb.ps1  InstallAndroidDependencies.ps1  SetupAndroidEnvVars.ps1  SetupAndroidEnvVars.sh
Utilities/Scripts/: common-functions.ps1  generateHeaderCheckProject.ps1  optimize-jpeg.ps1  optimize-png.ps1  reduce-texture-sizes.ps1  remove-release-files.ps1
Utilities/Tracing/: Capture-Trace.ps1  ez-perfetto.pbtx  ezTraceProvider.wprp
Utilities/clang-tidy/: RunClangTidy.ps1
(+2203 files in other folders)
